# colorSuitcaseDetect

./: CMakeLists.txt  classify.prototxt  main.cpp  readme.md  suitcase.prototxt
TrtNet/: CMakeLists.txt
TrtNet/include/: PluginFactory.h  TrtNet.h  YoloConfigs.h  YoloLayer.h
TrtNet/src/: TrtNet.cpp  YoloLayer.cu
baggage_feature_extractor/: baggage_feature.cpp  baggage_feature.h
model/: readme.md
suitcase_detector/: suitcaseClassify.cpp  suitcaseClassify.h  suitcase_detector.cpp  suitcase_detector.h
